# mesa

./: .gitignore  meson.build  meson_options.txt
.gitlab-ci/: test-source-dep.yml
include/: kopper_interface.h
src/: meson.build
src/amd/vulkan/: radv_cmd_buffer.c  radv_private.h  radv_sqtt.c
src/c11/: threads.h  time.h
src/compiler/: glsl_types.cpp
src/compiler/glsl/: glsl_parser.yy  glsl_parser_extras.cpp
src/compiler/nir/: nir_lower_uniforms_to_ubo.c
src/egl/: meson.build
src/egl/drivers/macos/: egl_macos.m
src/egl/main/: eglapi.c  egldisplay.c  egldisplay.h
src/gallium/: meson.build
src/gallium/auxiliary/driver_trace/: enums2names.py  tr_context.c  tr_dump_state.c
src/gallium/auxiliary/gallivm/: lp_bld_sample.c
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h  sw_helper.h
src/gallium/auxiliary/util/: u_blitter.c  u_screen.c  u_threaded_context.c  u_vertex_state_cache.c
src/gallium/drivers/iris/: iris_screen.c
src/gallium/drivers/llvmpipe/: lp_screen.c  lp_state_cs.c  lp_state_fs.c  lp_surface.c  lp_texture.c
src/gallium/drivers/radeonsi/: si_get.c
src/gallium/drivers/zink/: meson.build  zink_batch.c  zink_batch.h  (+19 more)
src/gallium/targets/libgl-metal/: meson.build  metal.c
src/loader/: loader_dri3_helper.c
src/mapi/glapi/: meson.build
src/mesa/main/: getstring.c
src/mesa/state_tracker/: st_cb_bitmap.c  st_cb_clear.c  st_cb_drawpixels.c  st_cb_drawtex.c  st_cb_readpixels.c  st_cb_texture.c  st_context.c  st_context.h  st_glsl_to_nir.cpp  st_pbo.c  st_program.c  st_program.h
src/util/: list.h  meson.build  xmlconfig.h
(+21 files in other folders)
